fix: increase padding on sides due to squished icons.
In v1.1.1 and before, the Github icon in the footer
would touch and be right next to the scroll bar, if
present, which doesn't look too nice. This commit
fixes that and adds more padding.

--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -7,7 +7,7 @@
     position: fixed;
     bottom: 0;
     left: 0;
-    padding: 0.2rem 1rem;
+    padding: 0.2rem 2rem;
     color: hsla(0, 0%, 96%, 0.72);
 }
 
